--- a/vehicle-provider/src/main/resources/application.properties
+++ b/vehicle-provider/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
+spring.rabbitmq.host=localhost
