--- a/vehicle-provider/pom.xml
+++ b/vehicle-provider/pom.xml
@@ -56,9 +56,9 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
         <dependency>
-            <groupId>repository.org.mapstruct</groupId>
+            <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.3.1.Final</version>
+            <version>1.5.2.Final</version>
             <scope>compile</scope>
         </dependency>
 		<dependency>
