--- a/vehicle-service/pom.xml
+++ b/vehicle-service/pom.xml
@@ -58,9 +58,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>repository.org.mapstruct</groupId>
+            <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.3.1.Final</version>
+			<version>1.5.2.Final</version>
         </dependency>
     </dependencies>
 
