--- a/vehicle-provider/pom.xml
+++ b/vehicle-provider/pom.xml
@@ -67,7 +67,11 @@
 			<version>0.0.1</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
